--- a/src/editor/css/style.css
+++ b/src/editor/css/style.css
@@ -59,3 +59,17 @@ body{
     flex-grow: 1;
     margin:0%;
 }
+
+/* .dg.main {
+    background-color: #f0f0f0;
+  } */
+  
+  /* Cambiar el color de fondo de la lista de opciones */
+  /* .dg ul {
+    background-color: #e0e0e0;
+  } */
+  
+  /* Cambiar el color del texto de las opciones */
+  /* .dg .property-name {
+    color: #0077cc;
+  } */
